[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/test/unit_test.gd" type="Script" id=1]
[ext_resource path="res://UI/Components/BattleLog/BattleLog.tscn" type="PackedScene" id=2]

[node name="control" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="v_box_container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="combat_log" parent="v_box_container" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 350.0

[node name="h_box_container" type="HBoxContainer" parent="v_box_container"]
margin_top = 370.0
margin_right = 224.0
margin_bottom = 720.0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="v_box_container" type="VBoxContainer" parent="v_box_container/h_box_container"]
margin_right = 224.0
margin_bottom = 350.0
size_flags_horizontal = 7
custom_constants/separation = 8

[node name="Add Timer" type="Button" parent="v_box_container/h_box_container/v_box_container"]
margin_right = 224.0
margin_bottom = 20.0
text = "Start Timer"

[node name="pause_timer" type="Button" parent="v_box_container/h_box_container/v_box_container"]
margin_top = 28.0
margin_right = 224.0
margin_bottom = 48.0
text = "Pause Timer"

[node name="Restart Timer" type="Button" parent="v_box_container/h_box_container/v_box_container"]
margin_top = 56.0
margin_right = 224.0
margin_bottom = 76.0
text = "Restart Timer"

[node name="h_box_container" type="HBoxContainer" parent="v_box_container/h_box_container/v_box_container"]
margin_top = 84.0
margin_right = 224.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="reduce" type="Button" parent="v_box_container/h_box_container/v_box_container/h_box_container"]
margin_right = 154.0
margin_bottom = 20.0
text = "Reduce amount of sec"

[node name="amount" type="TextEdit" parent="v_box_container/h_box_container/v_box_container/h_box_container"]
unique_name_in_owner = true
margin_left = 174.0
margin_right = 224.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3

[connection signal="pressed" from="v_box_container/h_box_container/v_box_container/Add Timer" to="." method="_on_Add_Timer_pressed"]
[connection signal="pressed" from="v_box_container/h_box_container/v_box_container/pause_timer" to="." method="_on_pause_timer_pressed"]
[connection signal="pressed" from="v_box_container/h_box_container/v_box_container/Restart Timer" to="." method="_on_Restart_Timer_pressed"]
[connection signal="pressed" from="v_box_container/h_box_container/v_box_container/h_box_container/reduce" to="." method="_on_reduce_pressed"]
